@@ -1,6 +1,7 @@
 NEXT 2016/12/07 FTR
    * New Metrics in stdplug: ChernSimons, RezzollaZhidenko.
-   * New Astrobjs in stdplug: DeformedTorus, DynamicalDiskBolometric.
+   * New Astrobjs in stdplug: DeformedTorus, DynamicalDiskBolometric,
+         EquatorialHotSpot.
 
 1.1.1 2016/10/30 BUG
    * When Gyoto is configured to be installed in another prefix than
